--- a/1.html
+++ b/1.html
@@ -1,5 +1,3 @@
 <script>
-   fetch("file:///sdcard/Download/secret.txt")
-    .then(r => r.text())
-    .then(alert)
+  window.location.href = "archer://banned";
 </script>
