--- a/1.html
+++ b/1.html
@@ -1,3 +1,4 @@
 <script>
-  window.location.href = "archer://banned";
+fetch("https://www.willhaben.at/will/../iad/adservices?promotionUrl=https%3A%2F%2Fsecure.adnxs.com@hackerone.com")
+  .then(r => r.text()).then(console.log);
 </script>
