--- a/1.html
+++ b/1.html
@@ -5,11 +5,11 @@
   <meta charset="UTF-8">
   <script>
     window.onload = function() {
-      window.location.href = "willhaben://iad/adservices?promotionUrl=https%3A%2F%2Fsecure.adnxs.com@hackerone.com";
+      window.location.href = "https://www.willhaben.at/will/../iad/adservices?promotionUrl=https%3A%2F%2Fsecure.adnxs.com@hackerone.com";
     };
   </script>
 </head>
 <body>
-  <p>Если приложение не открылось, <a href="willhaben://iad/adservices?promotionUrl=https%3A%2F%2Fsecure.adnxs.com@hackerone.com">нажмите здесь</a>.</p>
+  <p>Если приложение не открылось, <a href="https://www.willhaben.at/will/../iad/adservices?promotionUrl=https%3A%2F%2Fsecure.adnxs.com@hackerone.com">нажмите здесь</a>.</p>
 </body>
 </html>
